cross-table.js: rewrite the module.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6058 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/be/foxtrick.properties
+++ b/content/locale/be/foxtrick.properties
@@ -295,8 +295,8 @@ foxtrick.BackgroundFixed.desc=Статычная выява задніку.
 foxtrick.MatchIncome.desc=Прыбытак ад продажу квіткоў у справаздачы аб матчу
 foxtrick.CrossTable.allway_show_cross.desc=Заўсёды паказвай Cross-табліцу
 foxtrick.CrossTable.allway_show_graph.desc=Заўсёды паказвацб графік лігі
-foxtrick.CrossTable.GraphHeader.desc=Графік сэзону
-foxtrick.CrossTable.TableHeader.desc=Шахматная-табліца сэзону
+CrossTable.graph=Графік сэзону
+CrossTable.table=Шахматная-табліца сэзону
 
 foxtrick.YouthSkillHideUnknown.desc=Больш месца на старонцы юнакоў
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Хаваць невядомыя здольнасьці юнакоў на старонцы агляду гульца
