--- a/content/locale/bs/foxtrick.properties
+++ b/content/locale/bs/foxtrick.properties
@@ -320,8 +320,8 @@ foxtrick.BackgroundFixed.desc=Postavlja statičnu pozadinu stranice.
 foxtrick.MatchIncome.desc=Prihod sa utakmice u izvještaju
 foxtrick.CrossTable.allway_show_cross.desc=Uvijek prikazuj Tabelu s rezultatima
 foxtrick.CrossTable.allway_show_graph.desc=Uvijek prikazuj Grafikon plasmana u ligi
-foxtrick.CrossTable.GraphHeader.desc=Grafikon plasmana u ligi
-foxtrick.CrossTable.TableHeader.desc=Tabela s rezultatima
+CrossTable.graph=Grafikon plasmana u ligi
+CrossTable.table=Tabela s rezultatima
 foxtrick.YouthSkillHideUnknown.desc=Više prostora na stranici juniora
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Sakrij nepoznate vještine na stranici igrača u juniorskoj akademiji
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Sakrij riječ 'maksimum' zbog uštede prostora, posebno ako je uključen prikaz slika igrača
