--- a/content/locale/ca/foxtrick.properties
+++ b/content/locale/ca/foxtrick.properties
@@ -323,8 +323,8 @@ foxtrick.BackgroundFixed.desc=Imatge de fons estàtica.
 foxtrick.MatchIncome.desc=Ingressos de partit a la pàgina del partit
 foxtrick.CrossTable.allway_show_cross.desc=Mostra sempre la taula d'encreuaments
 foxtrick.CrossTable.allway_show_graph.desc=Mostra sempre la gràfica de la lliga
-foxtrick.CrossTable.GraphHeader.desc=Gràfic històric de lliga
-foxtrick.CrossTable.TableHeader.desc=Taula d'encreuaments de lliga
+CrossTable.graph=Gràfic històric de lliga
+CrossTable.table=Taula d'encreuaments de lliga
 foxtrick.YouthSkillHideUnknown.desc=Més espai per la pàgina de jugadors del planter
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Amaga les habilitats del planter a la pàgina dels jugadors del planter quan aquestes no es coneguin
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Amaga la clau 'màxima' per tenir més espai, sobre tot si s'han habilitat les fotos dels jugadors
