--- a/content/locale/cs/foxtrick.properties
+++ b/content/locale/cs/foxtrick.properties
@@ -315,8 +315,8 @@ foxtrick.BackgroundFixed.desc=Statický obrázek na pozadí
 foxtrick.MatchIncome.desc=Na stránce zápasu zobrazuje příjem ze zápasu
 foxtrick.CrossTable.allway_show_cross.desc=Vždy zobrazovat tabulku vzájemných utkání
 foxtrick.CrossTable.allway_show_graph.desc=Vždy zobrazovat graf vývoje ligové pozice
-foxtrick.CrossTable.GraphHeader.desc=Sezónní graf
-foxtrick.CrossTable.TableHeader.desc=Sezónní tabulka vzájemných utkání
+CrossTable.graph=Sezónní graf
+CrossTable.table=Sezónní tabulka vzájemných utkání
 foxtrick.MatchReportFormat.Text My Team.desc= Barva mého týmu
 foxtrick.MatchReportFormat.Text Home.desc=Barva domácího týmu
 foxtrick.MatchReportFormat.Text Away.desc=Barva hostujícího týmu
