--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -313,8 +313,8 @@ foxtrick.BackgroundFixed.desc=Statisches Hintergrundbild
 foxtrick.MatchIncome.desc=Zeigt Zuschauereinnahmen unter der Zuschauerverteilung an
 foxtrick.CrossTable.allway_show_cross.desc=Kreuztabelle immer anzeigen
 foxtrick.CrossTable.allway_show_graph.desc=Saisonverlauf immer anzeigen
-foxtrick.CrossTable.GraphHeader.desc=Saisonverlauf
-foxtrick.CrossTable.TableHeader.desc=Kreuzvergleich
+CrossTable.graph=Saisonverlauf
+CrossTable.table=Kreuzvergleich
 foxtrick.YouthSkillHideUnknown.desc=Verstecken unbekannter Skills in der Übersicht der Jugendspieler
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Verberge unbekannte Skills auf der Jugend-Übersichtsseite
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Verberge das Wort 'maximal' um mehr Platz zu erhalten wenn die Gesichter angezeigt werden
