--- a/content/locale/es/foxtrick.properties
+++ b/content/locale/es/foxtrick.properties
@@ -320,8 +320,8 @@ foxtrick.BackgroundFixed.desc=Imagen estática de fondo
 foxtrick.MatchIncome.desc=Ingresos en el reporte del partido
 foxtrick.CrossTable.allway_show_cross.desc=Siempre mostrar tabla
 foxtrick.CrossTable.allway_show_graph.desc=Siempre mostrar evolución gráfica de la liga
-foxtrick.CrossTable.GraphHeader.desc=Gráfico de la temporada
-foxtrick.CrossTable.TableHeader.desc=Enfrentamientos de la temporada
+CrossTable.graph=Gráfico de la temporada
+CrossTable.table=Enfrentamientos de la temporada
 foxtrick.YouthSkillHideUnknown.desc=Ocultar niveles de habilidad desconocidos de los juveniles en la página de jugadores
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Oculta las habilidades desconocidas de los juveniles en la página de resumen de jugadores juveniles.
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Oculta la palabra 'max.' para ganar espacio, sobre todo si las caras de los jugadores están visibles (juveniles)
