--- a/content/locale/es_SU/foxtrick.properties
+++ b/content/locale/es_SU/foxtrick.properties
@@ -314,8 +314,8 @@ foxtrick.BackgroundFixed.desc=Imagen de fondo estática
 foxtrick.MatchIncome.desc=Ingreso del partido dentro del reporte del partido
 foxtrick.CrossTable.allway_show_cross.desc=Mostrar siempre la Tabla cruzada
 foxtrick.CrossTable.allway_show_graph.desc=Mostrar siempre la gráfica de la liga
-foxtrick.CrossTable.GraphHeader.desc=Gráfica de la temporada
-foxtrick.CrossTable.TableHeader.desc=Tabla cruzada de la temporada
+CrossTable.graph=Gráfica de la temporada
+CrossTable.table=Tabla cruzada de la temporada
 foxtrick.YouthSkillHideUnknown.desc=Más espacio en la página de jugadores juveniles
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Oculta las habilidades desconocidas de los juveniles, dentro de la página de jugadores
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Oculta la palabra 'máximo' para ganar más espacio, dentro de la página de jugadores juveniles, especialmente si las caras estan habilitadas
