--- a/content/locale/fa/foxtrick.properties
+++ b/content/locale/fa/foxtrick.properties
@@ -291,8 +291,8 @@ foxtrick.BackgroundFixed.desc=عکس پشت زمينه ثابت
 foxtrick.MatchIncome.desc=درامد ورزشگاه در گزارش بازي
 foxtrick.CrossTable.allway_show_cross.desc=هميشه جدول را نشان بده
 foxtrick.CrossTable.allway_show_graph.desc=هميشه نمودار ليگ را نشان بده
-foxtrick.CrossTable.GraphHeader.desc=نمودار ليگ
-foxtrick.CrossTable.TableHeader.desc=جدول ليگ
+CrossTable.graph=نمودار ليگ
+CrossTable.table=جدول ليگ
 foxtrick.YouthSkillHideUnknown.desc=فضاي بيشتر در صفحه بازيکنان جوانان
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=مخفي کردن مهارت هاي نامعلوم درصفحه بازيکنان جوانان
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=مخفي کردن کلمه 'بيشترين' براي فضاي بيشتر
