--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -299,8 +299,8 @@ foxtrick.NtPeek.desc=Kurkista MJ/U20 otteluihin Hattrickin etusivulla
 
 foxtrick.CrossTable.allway_show_cross.desc=Näytä poikittainen taulukko aina
 foxtrick.CrossTable.allway_show_graph.desc=Näytä sarjagraafi aina
-foxtrick.CrossTable.GraphHeader.desc=Kausigraafi
-foxtrick.CrossTable.TableHeader.desc=Kausitaulukko (poikittainen)
+CrossTable.graph=Kausigraafi
+CrossTable.table=Kausitaulukko (poikittainen)
 
 #icons
 foxtrick.ExtraShortcuts.statistics=Tilastot
