--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -313,8 +313,8 @@ foxtrick.MatchPlayerColouring.Away.desc=Équipe jouant à l'extérieur
 foxtrick.CrossTable.cut_long_teamnames.desc=Coupe les noms des équipes dans le tableau croisé après la position :
 foxtrick.CrossTable.allway_show_cross.desc=Toujours afficher le tableau croisé des résultats
 foxtrick.CrossTable.allway_show_graph.desc=Toujours afficher le graphique de l'évolution du classement
-foxtrick.CrossTable.GraphHeader.desc=Évolution du classement par journées
-foxtrick.CrossTable.TableHeader.desc=Résultats croisés
+CrossTable.graph=Évolution du classement par journées
+CrossTable.table=Résultats croisés
 foxtrick.MatchReportFormat.Text_My_Team.desc=Couleur de mon équipe
 foxtrick.MatchReportFormat.Text_Home.desc=Couleur de l'équipe jouant à domicile
 foxtrick.MatchReportFormat.Text_Away.desc=Couleur de l'équipe jouant à l'extérieur
