--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -316,8 +316,8 @@ foxtrick.MatchPlayerColouring.Home.desc=Upotrijebiti vlastitu boju za domaću mo
 foxtrick.MatchPlayerColouring.Away.desc=Upotrijebiti vlastitu boju za gostujuću momčad
 foxtrick.CrossTable.allway_show_cross.desc=Uvijek prikazati tablični prikaz rasporeda utakmica u ligi
 foxtrick.CrossTable.allway_show_graph.desc=Uvijek prikazati grafikon promjene pozicija u ligi
-foxtrick.CrossTable.GraphHeader.desc=Sezonski grafikon
-foxtrick.CrossTable.TableHeader.desc=Sezonska tablica utakmica
+CrossTable.graph=Sezonski grafikon
+CrossTable.table=Sezonska tablica utakmica
 foxtrick.MatchReportFormat.Text_My_Team.desc=Boja moje momčadi
 foxtrick.MatchReportFormat.Text_Home.desc=Boja domaće momčadi
 foxtrick.MatchReportFormat.Text_Away.desc=Boja gostujuće momčadi
