--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -311,8 +311,8 @@ foxtrick.MatchPlayerColouring.Away.desc=Usa un colore personalizzato per la squa
 foxtrick.CrossTable.cut_long_teamnames.desc=Taglia i nomi di squadra troppo lunghi nella tabella delle partite incrociate
 foxtrick.CrossTable.allway_show_cross.desc=Mostra sempre tabella delle partite incrociate
 foxtrick.CrossTable.allway_show_graph.desc=Mostra sempre il grafico dell'andamento della serie
-foxtrick.CrossTable.GraphHeader.desc=Grafico della stagione
-foxtrick.CrossTable.TableHeader.desc=Tabella delle partite incrociate della stagione
+CrossTable.graph=Grafico della stagione
+CrossTable.table=Tabella delle partite incrociate della stagione
 foxtrick.MatchReportFormat.Text_My_Team.desc=Colore della propria squadra
 foxtrick.MatchReportFormat.Text_Home.desc=Colore della squadra di casa
 foxtrick.MatchReportFormat.Text_Away.desc=Colore della squadra in trasferta
