--- a/content/locale/mt/foxtrick.properties
+++ b/content/locale/mt/foxtrick.properties
@@ -308,8 +308,8 @@ foxtrick.MatchPlayerColouring.Away.desc=Juża kulur ippersonalizzat għat-tim li
 foxtrick.CrossTable.cut_long_teamnames.desc=Jaqta' ismijiet twal ta' timijiet fil-klassifiċi
 foxtrick.CrossTable.allway_show_cross.desc=Juri dejjem il-klassifika
 foxtrick.CrossTable.allway_show_graph.desc=Juri dejjem il-graph tas-serje
-foxtrick.CrossTable.GraphHeader.desc=Graph tal-istaġun
-foxtrick.CrossTable.TableHeader.desc=Klassifika tal-istaġun
+CrossTable.graph=Graph tal-istaġun
+CrossTable.table=Klassifika tal-istaġun
 foxtrick.MatchReportFormat.Text_My_Team.desc=Kulur tat-tim tiegħi
 foxtrick.MatchReportFormat.Text_Home.desc=Kulur tat-tim li qiegħed jilgħab f'daru
 foxtrick.MatchReportFormat.Text_Away.desc=Kulur tat-tim li qiegħed jilgħab barra minn daru
