--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -312,8 +312,8 @@ foxtrick.MatchPlayerColouring.Home.desc=Gebruik een andere kleur voor het thuis 
 foxtrick.MatchPlayerColouring.Away.desc=Gebruik een andere kleur voor het uit team
 foxtrick.CrossTable.allway_show_cross.desc=Toon de seizoentabel altijd
 foxtrick.CrossTable.allway_show_graph.desc=Toon de competitiegrafiek altijd
-foxtrick.CrossTable.GraphHeader.desc=Competitiegrafiek
-foxtrick.CrossTable.TableHeader.desc=Seizoentabel
+CrossTable.graph=Competitiegrafiek
+CrossTable.table=Seizoentabel
 foxtrick.MatchReportFormat.Text_My_Team.desc=Kleur van mijn team naam
 foxtrick.MatchReportFormat.Text_Home.desc=Kleur van het thuis team
 foxtrick.MatchReportFormat.Text_Away.desc=Kleur van het uit team
