--- a/content/locale/nn/foxtrick.properties
+++ b/content/locale/nn/foxtrick.properties
@@ -320,8 +320,8 @@ foxtrick.BackgroundFixed.desc=Statisk bakgrunnsbilete
 foxtrick.MatchIncome.desc=Kampinntekter i kamprapporten
 foxtrick.CrossTable.allway_show_cross.desc=Syn alltid krysstabellen
 foxtrick.CrossTable.allway_show_graph.desc=Syn alltid seriegrafen
-foxtrick.CrossTable.GraphHeader.desc=Sesonggraf
-foxtrick.CrossTable.TableHeader.desc=Sesongkrysstabell
+CrossTable.graph=Sesonggraf
+CrossTable.table=Sesongkrysstabell
 foxtrick.YouthSkillHideUnknown.desc=Meir plass til juniorspelarsida
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Skjul ukjente eigenskapar på oversiktsida for juniorspelar
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Skjul 'maks' for å få meir plass, spesielt dersom facecards er på
