--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -323,8 +323,8 @@ foxtrick.BackgroundFixed.desc=Używaj tła statycznego
 foxtrick.MatchIncome.desc=Pokazuje dochód z meczu w komentarzu meczowym
 foxtrick.CrossTable.allway_show_cross.desc=Zawsze pokazuj tabelę meczów
 foxtrick.CrossTable.allway_show_graph.desc=Zawsze pokazuj wykres pozycji
-foxtrick.CrossTable.GraphHeader.desc=Wykres pozycji
-foxtrick.CrossTable.TableHeader.desc=Tabela meczów
+CrossTable.graph=Wykres pozycji
+CrossTable.table=Tabela meczów
 foxtrick.YouthSkillHideUnknown.desc=Zwiększa ilość wolnego miejsca na stronie Juniorów
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Ukrywaj nieznane umiejętności juniorów
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Ukrywaj maksymalną wartość umiejętnośći, aby uzyskać więcej wolnego miejsca
