--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -312,8 +312,8 @@ foxtrick.BackgroundFixed.desc=Imagine fundal statica.
 foxtrick.MatchIncome.desc=Venituri meci in pagina detaliata a meciului
 foxtrick.CrossTable.allway_show_cross.desc=Arata mereu Tabelul incrucisat
 foxtrick.CrossTable.allway_show_graph.desc=Arata mereu graficul seriei
-foxtrick.CrossTable.GraphHeader.desc=Grafic sezon
-foxtrick.CrossTable.TableHeader.desc=Tabel incrucisat al sezonului
+CrossTable.graph=Grafic sezon
+CrossTable.table=Tabel incrucisat al sezonului
 foxtrick.YouthSkillHideUnknown.desc=Mai mult spatiu la pagina juniorilor
 foxtrick.YouthSkillHideUnknown.desc=Ascunde calitatile juniorilor care sunt necunoscute
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Ascunde cuvantul 'maxim' pentru a castiga spatiu
