--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -289,8 +289,8 @@ foxtrick.BackgroundFixed.desc=Статическое фоновое изобра
 foxtrick.MatchIncome.desc=Доход от матча в отчёте
 foxtrick.CrossTable.allway_show_cross.desc=Всегда показывать актуальную таблицу лиги
 foxtrick.CrossTable.allway_show_graph.desc=Всегда показывать график изменения положения команд
-foxtrick.CrossTable.GraphHeader.desc=Изменение положения команд
-foxtrick.CrossTable.TableHeader.desc=Результаты матчей
+CrossTable.graph=Изменение положения команд
+CrossTable.table=Результаты матчей
 foxtrick.YouthSkillHideUnknown.desc=Больше пространства на странице игрока юношеской команды
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Скрыть неизвестные навыки игрока юношеской команды
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Убирает слово 'максимум' в отображении известных навыков для увеличения полезного пространства, например, при включенных лицах игроков
