--- a/content/locale/sk/foxtrick.properties
+++ b/content/locale/sk/foxtrick.properties
@@ -309,8 +309,8 @@ foxtrick.MatchPlayerColouring.Away.desc=Hosť
 foxtrick.CrossTable.cut_long_teamnames.desc=Ustrihne dlhé názvy tímov na cross tabuľke
 foxtrick.CrossTable.allway_show_cross.desc=Vždy zobrazí cross tabuľku
 foxtrick.CrossTable.allway_show_graph.desc=Vždy zobrazí graf ligy
-foxtrick.CrossTable.GraphHeader.desc=Sezónny graf
-foxtrick.CrossTable.TableHeader.desc=Sezónna cross tabuľka
+CrossTable.graph=Sezónny graf
+CrossTable.table=Sezónna cross tabuľka
 foxtrick.MatchReportFormat.Text_My_Team.desc=Farba môjho názvu tímu
 foxtrick.MatchReportFormat.Text_Home.desc=Farba domáceho tímu
 foxtrick.MatchReportFormat.Text_Away.desc=Farba hosťujúceho tímu
