--- a/content/locale/sq/foxtrick.properties
+++ b/content/locale/sq/foxtrick.properties
@@ -248,8 +248,8 @@ foxtrick.MatchPlayerColouring.Away.desc=Perdor ngjyre te personalizuar per ekipi
 foxtrick.CrossTable.cut_long_teamnames.desc=Shkurto emrat e gjat te ekipeve te tabela kryqezuese
 foxtrick.CrossTable.allway_show_cross.desc=Gjithmon trego tabelen kryqezuese
 foxtrick.CrossTable.allway_show_graph.desc=Gjithmon trego grafikun e serise
-foxtrick.CrossTable.GraphHeader.desc=Grafikun e sezonit
-foxtrick.CrossTable.TableHeader.desc=Tabelen kryqezuese te sezonit
+CrossTable.graph=Grafikun e sezonit
+CrossTable.table=Tabelen kryqezuese te sezonit
 foxtrick.MatchReportFormat.Text_My_Team.desc=Ngjyrs emrin e ekipit tim
 foxtrick.MatchReportFormat.Text_Home.desc=Ngjyros ekipin vendas
 foxtrick.MatchReportFormat.Text_Away.desc=Ngjyros ekipin mik
