--- a/content/locale/sv/foxtrick.properties
+++ b/content/locale/sv/foxtrick.properties
@@ -373,8 +373,8 @@ foxtrick.MatchPlayerColouring.Away.desc=Använd en standardfärg för bortalaget
 foxtrick.CrossTable.cut_long_teamnames.desc=Klipp långa lagnamn i korstabellen efter
 foxtrick.CrossTable.allway_show_cross.desc=Visa alltid korstabell
 foxtrick.CrossTable.allway_show_graph.desc=Visa alltid grafik
-foxtrick.CrossTable.GraphHeader.desc=Säsongsgrafik
-foxtrick.CrossTable.TableHeader.desc=Korstabell
+CrossTable.graph=Säsongsgrafik
+CrossTable.table=Korstabell
 foxtrick.MatchReportFormat.Text_My_Team.desc=Färg för mitt lag
 foxtrick.MatchReportFormat.Text_Home.desc=Färg för hemmalag
 foxtrick.MatchReportFormat.Text_Away.desc=Färg för bortalag
