--- a/content/locale/vi/foxtrick.properties
+++ b/content/locale/vi/foxtrick.properties
@@ -320,8 +320,8 @@ foxtrick.BackgroundFixed.desc=Hình nền tĩnh.
 foxtrick.MatchIncome.desc=Thu nhập từ trận đấu được hiển thị ở bản báo cáo trận đấu
 foxtrick.CrossTable.allway_show_cross.desc=Luôn luôn hiển thị bảng xếp hạng
 foxtrick.CrossTable.allway_show_graph.desc=Luôn luôn hiển thị đồ thị bảng đấu
-foxtrick.CrossTable.GraphHeader.desc=Đồ thị mùa
-foxtrick.CrossTable.TableHeader.desc=Bảng xếp hạng theo mùa
+CrossTable.graph=Đồ thị mùa
+CrossTable.table=Bảng xếp hạng theo mùa
 foxtrick.YouthSkillHideUnknown.desc=Thêm khoảng trống cho trang cầu thủ trẻ
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Ẩn những kỹ năng hiện đang không biết ở trang tổng quan cầu thủ trẻ
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Ẩn chữ 'cao nhất' để có nhiều khoảng trống hơn đặc biệt khi chế độ facecards được bật
